# irods-consistency-check

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
ichk/: check.py  command.py  enums.py  formatters.py  resource_interface.py  resource_interface_factory.py  s3_resource_interface.py  status_codes.py  ufs_resource_interface.py
